PAMF-391 fix tab button padding to discourage wrapping (removed 4px from sides)

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -626,6 +626,7 @@ ul.bus-nav-tabs.nav-tabs {
     min-width:20%;
   }
   li .btn{
+    padding: 12px 14px;
     background:#14834D;
     box-shadow:unset;
     border-right:1px solid grey;
